Customer Group Created and Customer relationships created. Other fixes also here
